--- a/activator/pom.xml
+++ b/activator/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>pdi-osgi-bridge-parent</artifactId>
-    <version>8.2.0.0-SNAPSHOT</version>
+    <version>8.2.0.3-478</version>
   </parent>
   <artifactId>pdi-osgi-bridge-activator</artifactId>
-  <version>8.2.0.0-SNAPSHOT</version>
+  <version>8.2.0.3-478</version>
   <packaging>bundle</packaging>
   <dependencies>
     <dependency>
